Fix dark mode

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -5,11 +5,19 @@
     --vp-button-brand-bg: #000000;
     --vp-button-brand-hover-bg: #383838;
     --vp-button-brand-active-bg: #383838;
+    --vp-home-hero-name-background: -webkit-linear-gradient(220deg, #00dfd8, #007cf0) !important;
+    --vp-home-hero-image-background-image: linear-gradient(220deg, #00dfd8,  #007cf0) !important;
 }
 
 .dark {
     --vp-c-text-1: var(--vp-c-text-dark-1);
     --vp-c-brand: var(--vp-c-text-dark-1);
+    --vp-button-brand-bg: #FFFFFF;
+    --vp-button-brand-hover-bg: #CCCCCC;
+    --vp-button-brand-active-bg: #CCCCCC;
+    --vp-button-brand-text: #000000;
+    --vp-button-brand-hover-text: #000000;
+    --vp-button-brand-active-text: #000000;
 }
 
 .VPHero .name,
@@ -19,14 +27,20 @@
 
 .VPFeature {
     @apply border border-solid border-neutral-100 !important;
+    @apply bg-white !important;
 }
 
-.VPFeature {
-    @apply bg-white !important;
+.dark .VPFeature {
+    @apply bg-transparent !important;
+    @apply border-neutral-800 !important;
 }
 
 .VPFeature .icon {
     @apply border border-neutral-200 border-solid bg-neutral-100 !important;
+}
+
+.dark .VPFeature .icon {
+    @apply border border-neutral-700 border-solid bg-neutral-800 !important;
 }
 
 .VPButton.medium {
